# personal-finance-app

./: .gitignore  API_TESTING_GUIDE.md  AUTHENTICATION_GUIDE.md  Personal-Finance-App.postman_collection.json  README.md  TEST_DATA_FIXTURES.md  package.json  turbo.json
docs/: bun.md
server/: .gitignore  Cargo.toml  biome.json  bun.lockb  eslint.config.js  package-lock.json  package.json
server/migrations/: 20241013075432_create_users_table.sql  20241013092600_create_transactions_table.sql
server/specs/: file-tree.md  transactions-specs.md
server/src/: app.ts  config.rs  index.ts  main.rs  migrations.rs
server/src/controllers/: auth.controller.ts  budget.controller.ts  overview.controller.ts  pot.controller.ts  recurringBill.controller.ts  transaction.controller.ts
server/src/db/: index.ts  migrate.ts  mod.rs
server/src/db/migrations/: 0000_large_puma.sql  0001_add_recurring_bills.sql
server/src/db/migrations/meta/: 0000_snapshot.json  _journal.json
server/src/handlers/: auth.rs  transactions.rs
server/src/middleware/: auth.ts  error.ts  rateLimit.ts  validation.ts
server/src/models/: transaction.rs  user.rs
server/src/routes/: auth.rs  mod.rs  overview.routes.ts  pot.routes.ts  recurringBill.routes.ts  transaction.routes.ts  transactions.rs
server/src/services/: auth.service.ts  budget.service.ts  pot.service.ts  transaction.service.ts
server/src/types/: api.ts
server/src/utils/: env.ts  jwt.rs  jwt.ts  logger.ts  password.ts  response.ts
web/: bun.lockb  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  (+2 more)
(+126 files in other folders)
