[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
tokio = { version = "1.40", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls","tls-native-tls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10", features = ["serde", "v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
dotenvy = "0.15.7"

[package.metadata.sqlx]
offline = true
